<resources>
    <string name="app_name">University App</string>

    <!-- Drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Bottom Navigation Bar -->
    <string name="menu_home">Αρχική</string>
    <string name="menu_professors">Καθηγητές</string>
    <string name="menu_syllabus">Μαθήματα</string>

    <!-- Dashboard Activity -->
    <string name="dashboard_elmepa">ΕΛΜΕΠΑ</string>
    <string name="dashboard_det">Τμήμα Διοικητικής Επιστήμης \nκαι Τεχνολογίας (Άγιος Νικόλαος)</string>
    <string name="url_tag">URL</string>
    <string name="learn_more_url">https://mst.hmu.gr/proptyxiako/orologio-programma-mathimaton/</string>

    <string name="dashboard_announcements">Ανακοινώσεις</string>
    <string name="dashboard_department">Το Τμήμα</string>
    <string name="dashboard_students">Φοιτητές</string>
    <string name="dashboard_professors">Καθηγητές</string>

    <string name="about_app_text">Η εφαρμογή αυτή αναπτύχθηκε το 2020 από τον απόφοιτο του Τμήματος Στάθη  Καραδημητρίου με την επίβλεψη του Κώστα Παναγιωτάκη, Αναπληρωτή Καθηγητή και Προέδρου του Τμήματος με σκοπό την εξυπηρέτηση των μελών του Τμήματος και την προώθηση του τμήματος σε υποψήφιους φοιτητές. Αποτελεί την επόμενη έκδοση της εφαρμογής κινητών που είχε αναπτυχθεί στα πλαίσια της πτυχιακής εργασίας των φοιτητών του τμήματος Πελοπίδα Κεφαλιανού και Μαρίας Λαγουδάκη το 2017.</string>
    <string name="about_app_data">Η εφαρμογή χρησιμοποιεί δεδομένα σε μορφή rss απο το official site της σχολής (https://mst.hmu.gr/) Τα δεδομένα αυτά ανήκουν στο ΕΛΜΕΠΑ (Τμήμα ΔΕΤ - Άγιος Νικόλαος).</string>
    <string name="the_app">Εφαρμογή</string>
    <string name="about_app_title">Ανάπτυξη Εφαρμογής</string>
    <string name="contact">Επικοινωνία</string>
    <string name="learn_more_app_url">Μάθε Περισσότερα</string>

    <!-- Announcement Activity -->
    <string name="main_screen_title">Αρχική</string>
    <string name="announcement_header">Νέα &amp; Ανακοινώσεις</string>
    <string name="announcement_title">This is an announcement title</string>
    <string name="announcements_get_error">Error getting Data from site</string>

    <!-- Professors Activity -->
    <string name="professors_search_txt">Αναζήτησε έναν καθηγητή</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <string name="send_email_to_male_professor">Είσαι σίγουρος πως θέλεις να στείλεις e-mail στον κ. %1$s;</string>
    <string name="send_email_to_female_professor">Είσαι σίγουρος πως θέλεις να στείλεις e-mail στην κ. %1$s;</string>

    <string name="email_type">message/rfc822</string>
    <string name="sending_email">Send mail...</string>
    <string name="no_clients_installed">There are no email clients installed.</string>

    <string name="dialog_new_email">Νέο e-mail</string>
    <string name="dialog_yes">Ναι</string>
    <string name="dialog_cancel">Άκυρο</string>

    <!-- Department Activity -->
    <string name="dept_button_txt">Μάθε περισσότερα</string>
    <string name="virtual_tour">virtual_tour</string>
    <string name="research_img">research_img</string>
    <string name="map">map</string>
    <string name="deptSyllabusItems">Γνωστικά Αντικείμενα</string>
    <string name="deptProgramms">Προγράμματα</string>
    <string name="deptDepMembers">Μέλη Δ.Ε.Π.</string>
    <string name="deptSocial">Βρείτε μας Online</string>
    <string name="youtube">Youtube</string>

    <string name="error_data">Παρουσιάστηκε κάποιο σφάλμα</string>

    <string name="secretary_tel">tel:2841091103</string>
    <string name="secretary_mail">kalarhaki@hmu.gr</string>

    <string name="yt_app_link">vnd.youtube.com/channel/%1$s</string>
    <string name="yt_web_link">https://www.youtube.com/channel/%1$s</string>

    <!-- Students Activity -->
    <string name="students_title">Φοιτητές</string>
    <string name="student_schedule">Κάνε tap για να δεις\nτο ωρολόγιο πρόγραμμα</string>
    <string name="student_schedule_btn">Μάθε Περισσότερα</string>
    <string name="student_syllabus">Πρόγραμμα Σπουδών</string>
    <string name="student_useful_links">Χρήσιμοι Σύνδεσμοι</string>
    <string name="userTabChoice">userTabChoice</string>

    <!-- Research in Dept Activity -->
    <string name="research_title">Έρευνα</string>
    <string name="research_recycler_title">Έρευνα στο Τμήμα</string>
    <string name="syllabus_intent_data">SEMESTER</string>

    <!-- Chatbot Activity -->
    <string name="elmepaChatBotHeader">ΕΛΜΕΠΑ Chatbot</string>
    <string name="chatBotDescription">Το ChatBot υποστηρίζει τις ακόλουθες ερωτήσεις: Τηλέφωνο Γραμματείας, Πρόγραμμα Σπουδών, Ωρολόγιο Πρόγραμμα, Email Γραμματείας, Καθηγητές, Εικονική Περιήγηση, Ανακοινώσεις</string>
    <string name="chatBotMessageTxt">Πώς μπορώ να σε βοηθήσω;</string>
    <string name="answer_txt">Πώς μπορώ να σε βοηθήσω;</string>
    <string name="chatbot_announcements">Κάνε tap για να δεις τις ανακοινώσεις του Τμήματος!</string>
    <string name="chatbot_syllabus">Κάνε tap για να δείς το πρόγραμμα σπουδών!</string>
    <string name="chatbot_schedule">Κάνε tap για να δείς το πρόγραμμα των μαθημάτων!</string>
    <string name="chatbot_call_secretary">Κάνε tap για να καλέσω την Γραμματεία του Τμήματος!</string>
    <string name="chatbot_email_secretary">Κάνε tap για να στείλεις e-mail στην Γραμματεία!</string>
    <string name="chatbot_virtual_tour">Κάνε tap για να δείς την εικονική περιήγηση!</string>
    <string name="chatbot_hello">Γεία σου και εσένα!</string>
    <string name="chatbot_you_re_welcome">Παρακαλώ!</string>
    <string name="chatbot_dont_know_yet">Δεν γνωρίζω την απάντηση ακόμα</string>
    <string name="chatbot_search_professor">Κάνε tap για να αναζητήσεις έναν καθηγητή του Τμήματος!</string>

    <!-- Syllabus Activity -->
    <string name="syllabus_tab_one">Επιστήμη των \nΔεδομένων &amp; Τεχνολογίες\n Πληροφορικής</string>
    <string name="syllabus_tab_two">Διοίκηση Επιχειρήσεων \n&amp; Οργανισμών</string>
    <string name="syllabus_tab_three">Ψηφιακό Μάρκετινγκ \n&amp; Επικοινωνία</string>
    <string name="semester_title">Εξάμηνο Α\'</string>

    <!-- Syllabus Lesson Activity -->
    <string name="all_lessons_mandatory"><b>Όλα τα μαθήματα</b> είναι <b>υποχρεωτικά</b> σε αυτό το εξάμηνο</string>
    <string name="some_lessons_mandatory">Αυτό το εξάμηνο ο φοιτητής θα πρέπει να δηλώσει τα <b>Υποχρεωτικά Μαθήματα</b> και <b>δύο (2)</b> απο τα <b>Μαθήματα Επιλογής</b></string>
    <string name="data">data</string>
    <string name="mkt">mkt</string>
    <string name="ba">ba</string>
    <string name="lesson_info_title">Info</string>
    <string name="info_title">Επεξήγηση χρωμάτων</string>
    <string name="info_body">Τα μαθήματα που είναι σημειωμένα με μπλέ χρώμα στα αριστερά είναι μαθήματα υποχρεωτικά. Αντίστοιχα, μαθήματα τα οποία είναι σημειωμένα με πορτοκαλί χρώμα είναι μαθήματα επιλογής.</string>

    <!-- Virtual Tour Activity -->
    <string name="virtual_tour_txt">Εικονική Περιήγηση στο Τμήμα \n Διοικητικής Επιστήμης και Τεχνολογίας</string>


    <!-- No Internet Activity -->
    <string name="no_internet">Δεν υπάρχει σύνδεση στο Internet</string>

    <!-- Dep Member Item -->
    <string name="dep_member_txt">Κωστας Παναγιωτακης</string>

    <!-- Professor Item -->
    <string name="professor_txt">Κωστας Παναγιωτακης</string>
    <string name="professor_mail">cpanag@domain.com</string>

    <!-- Social Item -->
    <string name="social_txt">YouTube</string>

    <!-- Research Item -->
    <string name="research_item_txt">Έρευνα στο Τμήμα</string>
    <string name="menu_student">Φοιτητές</string>
    <string name="menu_dept">Τμήμα</string>
    <string name="menu_search">Αναζήτηση</string>
    <string name="widget_text">Αναζήτησε έναν καθηγητή</string>
    <string name="schedule_txt">Δες το Πρόγραμμα</string>
    <string name="undergraduate_students">Προπτυχιακοι Φοιτητές</string>
    <string name="postgraduate_students">Μεταπτυχιακοί Φοιτητές</string>

    <!-- About App-->
    <string name="news_publisher_header">News Publisher</string>
    <string name="news_publisher_desc">E–mail: kalarhaki@hmu.gr\nΤηλ.: 28410–91103</string>

    <!-- Contact -->
    <string name="contact_title">Επικοινωνία</string>

    <!-- Professor Widget -->
    <string name="widget_professor_intent">OPEN_PROFESSORS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
