<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg"
        tools:context=".ui.about.AboutActivity">

        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16"
            android:text="@string/about_app_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/learn_more"
            style="@style/text_16_bold_petrol"
            underline="@{true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/dimen_10"
            android:text="@string/learn_more_app_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_app" />

        <TextView
            android:id="@+id/about_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16"
            android:text="@string/about_app_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/learn_more" />

        <TextView
            android:id="@+id/news_publisher_name"
            style="@style/text_16_non_bold_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_16"
            android:text="@string/news_publisher_header"
            app:layout_constraintTop_toBottomOf="@id/about_data" />

        <TextView
            android:id="@+id/news_publisher_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_5"
            android:text="@string/news_publisher_desc"
            app:layout_constraintTop_toBottomOf="@id/news_publisher_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>