<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey"
    android:padding="@dimen/dimen_16">

    <ImageView
        android:id="@+id/nav_header_user_img"
        android:layout_width="@dimen/dimen_70"
        android:layout_height="@dimen/dimen_70"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/elmepa_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_header_user_full_name"
        style="@style/text_16_bold_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_16"
        android:text="@string/dashboard_elmepa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_header_user_img" />

    <TextView
        android:id="@+id/nav_header_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_5"
        android:text="@string/dashboard_det"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_header_user_full_name" />

</androidx.constraintlayout.widget.ConstraintLayout>